# ollama-runpod-worker

./: README.md  aya-expanse.Dockerfile  deepseek-r1.Dockerfile  deepseek-r1_1.5b.Dockerfile  llama3.2.Dockerfile  llama3.2_1b.Dockerfile  llama3.2_1b_llava-phi3.Dockerfile  llama3.2_1b_moondream.Dockerfile  llama3.2_llava-phi3.Dockerfile  llama3.2_moondream.Dockerfile  pyproject.toml  runpod_ollama_build_base.Dockerfile
builder/: requirements.txt
src/: handler.py
